chore: add new smileys, fix incorrect no. of mines generating, fix stretching of icons in taskbar, fix taskbar item sizes

--- a/src/app/_components/Taskbar/TaskbarItem/TaskbarItem.module.css
+++ b/src/app/_components/Taskbar/TaskbarItem/TaskbarItem.module.css
@@ -1,10 +1,9 @@
 .TaskbarItem {
     height: 100%;
-    width: max-content;
+    width: 180px;
     min-width: 60px;
-    padding: 4px;
+    padding: 4px 8px;
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 4px;
     box-shadow: 1px 1px rgba(0,0,0,0.5), inset 2px 2px #FFF
